--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "cyrtd"
 version = "0.1.0"
 description = ""
 authors = ["Ivan Mishalkin <iamishalkin@gmail.com>"]
+build = 'build.py'
 
 [tool.poetry.dependencies]
 python = "^3.7"
