--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ build = 'build.py'
 
 [tool.poetry.dependencies]
 python = "^3.7"
+sphinx = "^2.2"
+sphinx_rtd_theme = "^0.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
