--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,7 +5,7 @@ python:
     - method: pip
       path: .
       extra_requirements:
-        - docs
+        - docs/source
 
 sphinx:
   configuration: docs/source/conf.py
