--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ build = 'build.py'
 
 [tool.poetry.dependencies]
 python = "^3.7"
+cython = "^0.29.13"
 
 sphinx = { version = "^2.2", optional = true }
 sphinx_rtd_theme = { version = "^0.4.3", optional = true  }
+
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx_rtd_theme"]
