--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,19 +6,27 @@ authors = ["Ivan Mishalkin <iamishalkin@gmail.com>"]
 build = 'build.py'
 
 [tool.poetry.dependencies]
-python = "^3.7"
-cython = "^0.29.13"
-
-sphinx = { version = "^2.2", optional = true }
-sphinx_rtd_theme = { version = "^0.4.3", optional = true  }
-
-
-[tool.poetry.extras]
-docs = ["sphinx", "sphinx_rtd_theme"]
+python = "^3.6"
+pandas = "^0.25.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^3.0"
+cython = "^0.29.13"
+taskipy = "^1.1.3"
+pytest = "^5.3.5"
+sphinx = "^2.4.4"
+toml = "^0.10.0"
+sphinx_rtd_theme = "^0.4.3"
+
+
+[tool.taskipy.tasks]
+clear = "find dxfeed/core -type f \\( -iname \\*.c -o -iname \\*.cpp -o -iname \\*.pyd -o -iname \\*.so \\) -delete"
+build = "python build.py && poetry build"
+html_docs = "make html -C docs"
+test =  "pytest tests"
+post_build = "task clear"
+post_test = "task clear"
+
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=0.12", "cython"]
 build-backend = "poetry.masonry.api"
