--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ sphinx_rtd_theme = "^0.4.3"
 
 
 [tool.taskipy.tasks]
-clear = "find dxfeed/core -type f \\( -iname \\*.c -o -iname \\*.cpp -o -iname \\*.pyd -o -iname \\*.so \\) -delete"
+clear = "find cyrtd/ -type f \\( -iname \\*.c -o -iname \\*.cpp -o -iname \\*.pyd -o -iname \\*.so \\) -delete"
 build = "python build.py && poetry build"
 html_docs = "make html -C docs"
 test =  "pytest tests"
