--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -27,8 +27,8 @@ jobs:
           with:
             python-version: ${{ matrix.python-version }}
         - name: Install package artifact
-          uses: abatilo/actions-poetry@v1.5.0 # https://github.com/marketplace?type=actions&query=poetry
-            with: install --no-root --no-dev --extras "taskipy"
+          uses: abatilo/actions-poetry@v1.5.0
+          with: install --no-root --no-dev --extras "taskipy"
           run: |
             task build -f sdist
             pip install dist/cyrtd*
@@ -52,7 +52,7 @@ jobs:
     # Run developer tasks
     - name: Install dependencies
       uses: abatilo/actions-poetry@v1.5.0 # https://github.com/marketplace?type=actions&query=poetry
-        with: install --no-root
+      with: install --no-root
     - name: Run tests
       run: |
         task test
@@ -80,8 +80,8 @@ jobs:
             python-version: ${{ matrix.python-version }}
         # Run developer tasks
         - name: Install dependencies
-          uses: abatilo/actions-poetry@v1.5.0 # https://github.com/marketplace?type=actions&query=poetry
-            with: install --no-root
+          uses: abatilo/actions-poetry@v1.5.0
+          with: install --no-root
         - name: Publish to PyPI
           run: |
             task build
