--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.5, 3.6, 3.7, 3.8]
+        python: [3.5, 3.6, 3.7, 3.8]
 
       runs-on: ${{ matrix.os }}
 
@@ -22,10 +22,10 @@ jobs:
         - uses: actions/checkout@v2
           with:
             submodules: true
-        - name: Set up Python ${{ matrix.python-version }}
+        - name: Set up Python ${{ matrix.python }}
           uses: actions/setup-python@v1
           with:
-            python-version: ${{ matrix.python-version }}
+            python-version: ${{ matrix.python }}
         - name: Install package artifact
           uses: abatilo/actions-poetry@v1.5.0
           with: install --no-root --no-dev --extras "taskipy"
@@ -37,7 +37,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.5, 3.6, 3.7, 3.8]
+        python: [3.5, 3.6, 3.7, 3.8]
 
       runs-on: ${{ matrix.os }}
 
@@ -45,10 +45,10 @@ jobs:
         - uses: actions/checkout@v2
           with:
             submodules: true
-        - name: Set up Python ${{ matrix.python-version }}
+        - name: Set up Python ${{ matrix.python }}
           uses: actions/setup-python@v1
           with:
-            python-version: ${{ matrix.python-version }}
+            python-version: ${{ matrix.python }}
     - name: Install dependencies
       uses: abatilo/actions-poetry@v1.5.0
       with: install --no-root
@@ -65,7 +65,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.7]
+        python: [3.7]
 
       runs-on: ${{ matrix.os }}
 
@@ -73,10 +73,10 @@ jobs:
         - uses: actions/checkout@v2
           with:
             submodules: true
-        - name: Set up Python ${{ matrix.python-version }}
+        - name: Set up Python ${{ matrix.python }}
           uses: actions/setup-python@v1
           with:
-            python-version: ${{ matrix.python-version }}
+            python-version: ${{ matrix.python }}
         - name: Install dependencies
           uses: abatilo/actions-poetry@v1.5.0
           with: install --no-root
