--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python: [3.5, 3.6, 3.7, 3.8]
+        python-version: [3.5, 3.6, 3.7, 3.8]
 
       runs-on: ${{ matrix.os }}
 
@@ -22,10 +22,10 @@ jobs:
         - uses: actions/checkout@v2
           with:
             submodules: true
-        - name: Set up Python ${{ matrix.python }}
+        - name: Set up Python ${{ matrix.python-version }}
           uses: actions/setup-python@v1
           with:
-            python-version: ${{ matrix.python }}
+            python-version: ${{ matrix.python-version }}
         - name: Install package artifact
           uses: abatilo/actions-poetry@v1.5.0
           with: install --no-root --no-dev --extras "taskipy"
@@ -37,7 +37,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python: [3.5, 3.6, 3.7, 3.8]
+        python-version: [3.5, 3.6, 3.7, 3.8]
 
       runs-on: ${{ matrix.os }}
 
@@ -45,27 +45,27 @@ jobs:
         - uses: actions/checkout@v2
           with:
             submodules: true
-        - name: Set up Python ${{ matrix.python }}
+        - name: Set up Python ${{ matrix.python-version }}
           uses: actions/setup-python@v1
           with:
-            python-version: ${{ matrix.python }}
-    - name: Install dependencies
-      uses: abatilo/actions-poetry@v1.5.0
-      with: install --no-root
-    - name: Run tests
-      run: |
-        task test
-    - name: Generate doc
-      run: |
-        task html_docs
-      if: matrix.os == 'ubuntu-latest'
+            python-version: ${{ matrix.python-version }}
+        - name: Install dependencies
+          uses: abatilo/actions-poetry@v1.5.0
+          with: install --no-root
+        - name: Run tests
+          run: |
+            task test
+        - name: Generate doc
+          run: |
+            task html_docs
+          if: matrix.os == 'ubuntu-latest'
 #       send zip after generation
 
   publishing:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python: [3.7]
+        python-version: [3.7]
 
       runs-on: ${{ matrix.os }}
 
@@ -73,10 +73,10 @@ jobs:
         - uses: actions/checkout@v2
           with:
             submodules: true
-        - name: Set up Python ${{ matrix.python }}
+        - name: Set up Python ${{ matrix.python-version }}
           uses: actions/setup-python@v1
           with:
-            python-version: ${{ matrix.python }}
+            python-version: ${{ matrix.python-version }}
         - name: Install dependencies
           uses: abatilo/actions-poetry@v1.5.0
           with: install --no-root
