--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -26,9 +26,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install package artifact
+    - name: Install poetry
       uses: abatilo/actions-poetry@v1.5.0
       with: install --no-root --no-dev --extras "taskipy"
+    - name: Install package artifact
       run: |
         task build -f sdist
         pip install dist/cyrtd*
