--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -30,7 +30,9 @@ jobs:
       run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
       shell: bash
     - name: Set poetry env
-      run: poetry install --no-root --no-dev --extras "taskipy"
+      run: |
+        poetry install --no-root --no-dev --extras "taskipy"
+        export PATH="$HOME/.poetry/bin:$PATH"
       shell: bash
     - name: Install package artifact
       run: |
