--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -27,12 +27,13 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install poetry
-      run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+      run: |
+        curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+        export PATH="$HOME/.poetry/bin:$PATH"
       shell: bash
     - name: Set poetry env
       run: |
         poetry install --no-root --no-dev --extras "taskipy"
-        export PATH="$HOME/.poetry/bin:$PATH"
       shell: bash
     - name: Install package artifact
       run: |
