--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.5, 3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8]
 
     runs-on: ${{ matrix.os }}
 
@@ -33,7 +33,7 @@ jobs:
       shell: bash
     - name: Set poetry env
       run: |
-        poetry install --no-root --no-dev --extras "taskipy"
+        poetry install --no-root --no-dev --extras taskipy
       shell: bash
     - name: Install package artifact
       run: |
