--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ toml = "^0.10.0"
 sphinx_rtd_theme = "^0.4.3"
 
 [tool.poetry.extras]
-taskipy = "taskipy"
+taskipy = ["taskipy"]
 
 
 [tool.taskipy.tasks]
