--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -37,7 +37,7 @@ jobs:
       shell: bash
     - name: Install package artifact
       run: |
-        task build -f sdist
+        poetry run task build -f sdist
         pip install dist/cyrtd*
         pip uninstall dxfeed
   build:
