--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -30,6 +30,7 @@ jobs:
       run: |
         curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
         echo "::add-path::$HOME/.poetry/bin"
+        poetry config virtualenvs.create false
       shell: bash
     - name: Set poetry env
       run: |
