--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -28,8 +28,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install poetry
       run: |
-        curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
-        echo "::add-path::$HOME/.poetry/bin"
+        pip install poetry
+#        curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+#        echo "::add-path::$HOME/.poetry/bin"
       shell: bash
     - name: Set poetry env
       run: |
