--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -36,13 +36,13 @@ jobs:
       run: |
         poetry config virtualenvs.create false
         poetry install --no-root --no-dev --extras taskipy
-      shell: bash
+      shell: poetry shell
     - name: Install package artifact
       run: |
         task build -f sdist
         pip install dist/cyrtd*
         pip uninstall dxfeed
-      shell: bash
+      shell: poetry shell
   build:
     needs: installation
     strategy:
