--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -34,15 +34,16 @@ jobs:
       shell: bash
     - name: Set poetry env
       run: |
-        poetry config virtualenvs.create false
+        poetry shell
         poetry install --no-root --no-dev --extras taskipy
-      shell: poetry shell
+      shell: bash
     - name: Install package artifact
       run: |
+        poetry shell |
         task build -f sdist
         pip install dist/cyrtd*
         pip uninstall dxfeed
-      shell: poetry shell
+      shell: bash
   build:
     needs: installation
     strategy:
