pip install taskipy

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -34,11 +34,13 @@ jobs:
       shell: bash
     - name: Set poetry env
       run: |
-        python -m poetry install --no-root --no-dev --extras taskipy
+        poetry install --no-root --no-dev
+        pip install taskipy
+        task build -f sdist
+        pip uninstall taskipy
       shell: bash
     - name: Install package artifact
       run: |
-        python -m taskipy.cli build -f sdist
         pip install dist/cyrtd*
         pip uninstall dxfeed
       shell: bash
