pip uninstall taskipy cython

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -37,7 +37,7 @@ jobs:
         poetry install --no-root --no-dev
         pip install taskipy cython
         task build -f sdist
-        pip uninstall taskipy cython
+        pip uninstall --yes taskipy cython
       shell: bash
     - name: Install package artifact
       run: |
