--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -32,7 +32,7 @@ jobs:
       shell: bash
     - name: Set poetry env
       run: |
-        poetry config settings.virtualenv.create false
+        poetry config virtualenvs.create false
         poetry install --no-root --no-dev
         pip install taskipy cython
         task build -f sdist
