--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -13,7 +13,7 @@ jobs:
   installation:
     strategy:
       matrix:
-        os: [windows-latest, macos-latest]
+        os: [windows-latest]
         python-version: [3.6]
 
     runs-on: ${{ matrix.os }}
