no linux on publish stage

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -84,7 +84,7 @@ jobs:
     needs: [installation, build]
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [windows-latest, macos-latest]
         python-version: [3.7]
 
     runs-on: ${{ matrix.os }}
