--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -84,7 +84,7 @@ jobs:
     needs: [installation, build]
     strategy:
       matrix:
-        os: [windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: [3.7]
 
     runs-on: ${{ matrix.os }}
@@ -109,9 +109,9 @@ jobs:
     - name: Remove redundant files
       run: |
         if [ "$RUNNER_OS" == "Linux" ]; then
-          find type -f -iname *.whl -delete
+          find dist/ type -f -iname *.whl -delete
         else
-          find type -f -iname *.tar.gz -delete
+          find dist/ type -f -iname *.tar.gz -delete
         fi
       shell: bash
     - name: Publish to PyPI
