--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -106,17 +106,22 @@ jobs:
         poetry config virtualenvs.create false
         poetry install --no-root
       shell: bash
+    - name: Create package artifacts
+      run: |
+        task build
+      shell: bash
     - name: Remove redundant files
+      if: success()
       run: |
         if [ "$RUNNER_OS" == "Linux" ]; then
-          find dist/ type f -iname *.whl -delete
+          find dist/ -type f -iname *.whl -delete
         else
-          find dist/ type f -iname *.tar.gz -delete
+          find dist/ -type f -iname *.tar.gz -delete
         fi
       shell: bash
     - name: Publish to PyPI
+      if: success()
       run: |
-        task build
         poetry config repositories.testpypi https://test.pypi.org/legacy/
         poetry publish -r testpypi -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }}
       shell: bash
