--- a/.github/workflows/testpackage.yml
+++ b/.github/workflows/testpackage.yml
@@ -1,12 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Test package
 
 on:
   push:
-    tags:
-    - '*'
+    branches:
+      - master
 
 jobs:
   installation:
@@ -78,49 +78,3 @@ jobs:
       shell: bash
       if: matrix.os == 'ubuntu-latest'
 #       send zip after generation
-
-  publishing:
-    needs: [installation, build]
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.7]
-
-    runs-on: ${{ matrix.os }}
-
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install poetry
-      run: |
-        pip install poetry
-      shell: bash
-    - name: Set poetry env
-      run: |
-        poetry config virtualenvs.create false
-        poetry install --no-root
-      shell: bash
-    - name: Create package artifacts
-      run: |
-        task build
-      shell: bash
-    - name: Remove redundant files
-      if: success()
-      run: |
-        if [ "$RUNNER_OS" == "Linux" ]; then
-          find dist/ -type f -iname *.whl -delete
-        else
-          find dist/ -type f -iname *.tar.gz -delete
-        fi
-      shell: bash
-    - name: Publish to PyPI
-      if: success()
-      run: |
-        poetry config repositories.testpypi https://test.pypi.org/legacy/
-        poetry publish -r testpypi -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }}
-      shell: bash
