--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,11 +1,5 @@
-version: 2
-
+build:
+  image: latest
 python:
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
-
-sphinx:
-  configuration: docs/source/conf.py
+  version: 3.6
+  pip_install: true
