--- a/.github/workflows/publishpackage.yml
+++ b/.github/workflows/publishpackage.yml
@@ -59,10 +59,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
       - name: Install poetry
         run: |
           pip install poetry
-          poetry config virtualenvs.create false
         shell: bash
       - name: Clear dist folder
         run: |
